Istio/gateway.yaml
apiVersion: gateway.networking.istio.io
kind: Gateway
metadata:
    name: test-gateway
specs:
    selector:
        istio: ingressgateway
    servers:
    - port: 
        number: 80
        name: http
        protocol: HTTP 
      hosts:
        - bookinfo.app


---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: reviews
spec:
    hosts: 
        - reviews
    http:
        - route:
            - destination:
                host: reviews
                subset: v1
              weight: 75 
        - route:
            - destination:
                host: reviews
                subset: v2
              weight: 25


---
